# WEBprojectus

./: pyproject.toml
web_game/: Countries.db  db.sqlite3  manage.py
web_game/gallery/: models.py  tests.py
web_game/gallery/migrations/: 0001_initial.py
web_game/main/: Countries.db  admin.py  cnt.py  forms.py  models.py  sql_processing.py  tests.py  urls.py  views.py
web_game/main/migrations/: 0001_initial.py  0002_countrieslist_alter_task_options.py  0003_countrieslist_image.py  0004_remove_countrieslist_description.py  0005_countrieslist_description.py  0006_answers.py  0007_quizsessioninfo.py  0008_alter_countrieslist_id.py  0009_quizsessioninfo_round_counter.py  0010_quizsessioninfo_call_from_question_page.py
web_game/main/templates/main/: about.html  answer.html  answer_flags.html  base.html  countries_descriptions.html  countries_list.html  create.html  elements_descriptions.html  elements_list.html  finish.html  index.html  question.html  question_flags.html  temps.html
web_game/quiz/: models.py
web_game/web_game/: asgi.py  settings.py  urls.py  wsgi.py
