[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["Leonid <leo.semenov1980@Gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
